test/errors/enumeration_types_error/zs/not_available_enum_item_error.zs
package not_available_enum_item_error;

enum uint8 NotAvailableEnumItem
{
    NONE       = 000b,
    DARK_RED   = DARK_BLACK,
    DARK_BLACK = 111b
};
